<resources>
    <!--Necesary for TextInputLayout-->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="app_name">UFPS Radio</string>
    <string name="title_activity_radio">Radio</string>
    <string name="action_settings">Settings</string>
    <string name="errorStream">No hay acceso al stream</string>
    <string name="errorInternet">No hay acceso a internet</string>
    <string name="exito">Exito</string>
    <string name="volver_a_intentarlo">Vover a intentar</string>
    <string name="salir">Salir</string>
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="title_activity_menu">ActivityMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Programación</string>
    <string name="menu_gallery">Podcast</string>
    <string name="menu_slideshow">Favoritos</string>
    <string name="menu_tools">Setings</string>
    <string name="menu_share">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
