<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_programacion"
            android:icon="@drawable/lista"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_podcast"
            android:icon="@drawable/music"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/corazon"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/informacion"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ajustes"
                android:title="@string/menu_tools" />

        </menu>
    </item>

</menu>
